# airoi

./: Cargo.toml
src/: error.rs  lib.rs  main.rs  util.rs
src/cli/: execute.rs  mod.rs  parser.rs
src/keys/: contacts.rs  key_gen.rs  mod.rs
src/message/: mod.rs  receive.rs  send.rs
src/storage/: encrypted_file.rs  keyring.rs  mod.rs
src/tor/: config.rs
tests/: test_send_and_receive.rs
