[package]
name = "airoi"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "airoi_cli"
path = "src/main.rs"

[lib]
name = "airoi_core"
path = "src/lib.rs"

[dependencies]
clap = {version = "4.5.47", features = ["derive", "color", "error-context"]}
anyhow = "1.0.99"
thiserror = "2.0.16"
ed25519-dalek = "2.2.0"
dirs = "6.0.0"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.143"
rpassword = "7.4.0"
rand = "0.9.2"
sha2 = "0.11.0-rc.2"
bs58 = "0.5.1"
chrono = "0.4.42"
tokio = {version = "1.47.1", features = ["full"]}
snow = "0.10.0"
chacha20poly1305 = {version = "0.10.1"}
